# water-design

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/core/: calculation_engine.py  embeddings.py  exceptions.py  llm.py  report_exceptions.py  task_queue.py  tool_definitions.py  vector_store.py
backend/app/db/: database.py
backend/app/models/: __init__.py  calculation_rule.py  case.py  conversation.py  cost_estimate.py  project.py  report.py  specification.py  terrain.py  unit_price.py
backend/app/prompts/: report_prompts.py  system_prompts.py
backend/app/schemas/: chat.py  cost_estimation.py  knowledge_base.py  project.py  report.py  terrain.py  unit_price.py
backend/app/services/: agent.py  agent_orchestrator.py  chat_service.py  cost_calculation.py  intent_detection.py  memory_service.py  report_service.py  retrieval_service.py  template_service.py  terrain_service.py
backend/scripts/: seed_calculation_rules.py  seed_unit_prices.py
backend/templates/reports/: cost_estimate_template.md  feasibility_report_template.md
backend/tests/: conftest.py
backend/tests/api/: test_projects.py
backend/tests/core/: test_llm.py  test_vector_store.py
backend/tests/fixtures/: sample_knowledge.md  sample_river_survey.csv
backend/tests/services/: test_agent.py  test_chat_service.py  test_cost_calculation.py  test_intent_detection.py  test_memory.py  test_retrieval_service.py  (+2 more)
(+50 files in other folders)
